Image link doesn't create a preview view controller. https://bugs.webkit.org/show_bug.cgi?id=145320

Also try to create the preview view controller if the hit-tested node
is a image link.

Patch by Yongjun Zhang <yongjun_zhang@apple.com> on 2015-05-22
Reviewed by Beth Dakin.

* UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView gestureRecognizerShouldBegin:]):
(-[WKContentView previewViewControllerForPosition:inSourceView:]):

Canonical link: https://commits.webkit.org/163327@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@184798 268f45cc-cd09-0410-ab3c-d52691b4dbfc